[package]
name = "reochat"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
strip = true
lto = true

[dependencies]
anyhow = "1.0.74"
chrono = "0.4.24"
env_logger = "0.10.0"
iced = { version = "0.8.0", features = ["svg"] }
log = "0.4.20"
matrix-sdk = "0.6.2"
once_cell = "1.17.1"
tokio = { version = "1.31.0", features = ["macros", "rt-multi-thread"] }
