[package]
name = "reochat"
version = "0.1.0"
edition = "2021"
authors = ["Brynley Llewellyn-Roux"]
description = "A Matrix client written in Rust."
repository = "https://github.com/brynblack/reochat"
license = "MIT"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.8", features = ["derive"] }
env_logger = "0.11.3"
iced = { version = "0.12.1", features = ["advanced", "svg", "tokio"] }
log = "0.4.22"
matrix-sdk = "0.7.1"
matrix-sdk-ui = "0.7.0"
once_cell = "1.19.0"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
